user service finalize
