# pkg/api/v1/service.pb.go
@@ -286,7 +286,7 @@ var file_service_proto_rawDesc = []byte{
 	0x65, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x04, 0x6e, 0x61, 0x6d, 0x65, 0x12, 0x14, 0x0a,
 	0x05, 0x65, 0x6d, 0x61, 0x69, 0x6c, 0x18, 0x03, 0x20, 0x01, 0x28, 0x09, 0x52, 0x05, 0x65, 0x6d,
 	0x61, 0x69, 0x6c, 0x12, 0x10, 0x0a, 0x03, 0x69, 0x6d, 0x67, 0x18, 0x04, 0x20, 0x01, 0x28, 0x09,
-	0x52, 0x03, 0x69, 0x6d, 0x67, 0x32, 0xbe, 0x01, 0x0a, 0x0b, 0x55, 0x73, 0x65, 0x72, 0x53, 0x65,
+	0x52, 0x03, 0x69, 0x6d, 0x67, 0x32, 0x96, 0x02, 0x0a, 0x0b, 0x55, 0x73, 0x65, 0x72, 0x53, 0x65,
 	0x72, 0x76, 0x69, 0x63, 0x65, 0x12, 0x5f, 0x0a, 0x06, 0x73, 0x69, 0x67, 0x6e, 0x49, 0x6e, 0x12,
 	0x1b, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x2e, 0x53,
 	0x69, 0x67, 0x6e, 0x49, 0x6e, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x1b, 0x2e, 0x73,
@@ -298,17 +298,22 @@ var file_service_proto_rawDesc = []byte{
 	0x2e, 0x55, 0x73, 0x65, 0x72, 0x1a, 0x12, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x70,
 	0x72, 0x6f, 0x74, 0x6f, 0x2e, 0x55, 0x73, 0x65, 0x72, 0x22, 0x1b, 0x82, 0xd3, 0xe4, 0x93, 0x02,
 	0x15, 0x12, 0x13, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x75, 0x73, 0x65, 0x72, 0x2f, 0x75, 0x73, 0x65,
-	0x72, 0x2f, 0x7b, 0x69, 0x64, 0x7d, 0x42, 0x95, 0x01, 0x5a, 0x0e, 0x2e, 0x3b, 0x73, 0x65, 0x72,
-	0x76, 0x69, 0x63, 0x65, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x92, 0x41, 0x81, 0x01, 0x12, 0x58, 0x0a,
-	0x0c, 0x55, 0x73, 0x65, 0x72, 0x20, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x22, 0x43, 0x0a,
-	0x0c, 0x75, 0x73, 0x65, 0x72, 0x20, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x12, 0x1e, 0x68,
-	0x74, 0x74, 0x70, 0x73, 0x3a, 0x2f, 0x2f, 0x69, 0x6d, 0x61, 0x67, 0x65, 0x63, 0x68, 0x61, 0x74,
-	0x2e, 0x67, 0x65, 0x74, 0x69, 0x74, 0x71, 0x65, 0x63, 0x2e, 0x63, 0x6f, 0x6d, 0x1a, 0x13, 0x77,
-	0x78, 0x2e, 0x63, 0x68, 0x65, 0x65, 0x40, 0x67, 0x65, 0x74, 0x69, 0x71, 0x65, 0x63, 0x2e, 0x63,
-	0x6f, 0x6d, 0x32, 0x03, 0x31, 0x2e, 0x30, 0x2a, 0x01, 0x02, 0x32, 0x10, 0x61, 0x70, 0x70, 0x6c,
-	0x69, 0x63, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x2f, 0x6a, 0x73, 0x6f, 0x6e, 0x3a, 0x10, 0x61, 0x70,
-	0x70, 0x6c, 0x69, 0x63, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x2f, 0x6a, 0x73, 0x6f, 0x6e, 0x62, 0x06,
-	0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x72, 0x2f, 0x7b, 0x69, 0x64, 0x7d, 0x12, 0x56, 0x0a, 0x0a, 0x73, 0x65, 0x61, 0x72, 0x63, 0x68,
+	0x55, 0x73, 0x65, 0x72, 0x12, 0x12, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x70, 0x72,
+	0x6f, 0x74, 0x6f, 0x2e, 0x55, 0x73, 0x65, 0x72, 0x1a, 0x12, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x69,
+	0x63, 0x65, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x2e, 0x55, 0x73, 0x65, 0x72, 0x22, 0x20, 0x82, 0xd3,
+	0xe4, 0x93, 0x02, 0x1a, 0x12, 0x18, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x75, 0x73, 0x65, 0x72, 0x2f,
+	0x73, 0x65, 0x61, 0x72, 0x63, 0x68, 0x2f, 0x7b, 0x65, 0x6d, 0x61, 0x69, 0x6c, 0x7d, 0x42, 0x95,
+	0x01, 0x5a, 0x0e, 0x2e, 0x3b, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x70, 0x72, 0x6f, 0x74,
+	0x6f, 0x92, 0x41, 0x81, 0x01, 0x12, 0x58, 0x0a, 0x0c, 0x55, 0x73, 0x65, 0x72, 0x20, 0x73, 0x65,
+	0x72, 0x76, 0x69, 0x63, 0x65, 0x22, 0x43, 0x0a, 0x0c, 0x75, 0x73, 0x65, 0x72, 0x20, 0x73, 0x65,
+	0x72, 0x76, 0x69, 0x63, 0x65, 0x12, 0x1e, 0x68, 0x74, 0x74, 0x70, 0x73, 0x3a, 0x2f, 0x2f, 0x69,
+	0x6d, 0x61, 0x67, 0x65, 0x63, 0x68, 0x61, 0x74, 0x2e, 0x67, 0x65, 0x74, 0x69, 0x74, 0x71, 0x65,
+	0x63, 0x2e, 0x63, 0x6f, 0x6d, 0x1a, 0x13, 0x77, 0x78, 0x2e, 0x63, 0x68, 0x65, 0x65, 0x40, 0x67,
+	0x65, 0x74, 0x69, 0x71, 0x65, 0x63, 0x2e, 0x63, 0x6f, 0x6d, 0x32, 0x03, 0x31, 0x2e, 0x30, 0x2a,
+	0x01, 0x02, 0x32, 0x10, 0x61, 0x70, 0x70, 0x6c, 0x69, 0x63, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x2f,
+	0x6a, 0x73, 0x6f, 0x6e, 0x3a, 0x10, 0x61, 0x70, 0x70, 0x6c, 0x69, 0x63, 0x61, 0x74, 0x69, 0x6f,
+	0x6e, 0x2f, 0x6a, 0x73, 0x6f, 0x6e, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
@@ -334,10 +339,12 @@ var file_service_proto_depIdxs = []int32{
 	3, // 0: serviceproto.SignInReponse.user:type_name -> serviceproto.User
 	0, // 1: serviceproto.UserService.signIn:input_type -> serviceproto.SignInRequest
 	3, // 2: serviceproto.UserService.getUser:input_type -> serviceproto.User
-	1, // 3: serviceproto.UserService.signIn:output_type -> serviceproto.SignInReponse
-	3, // 4: serviceproto.UserService.getUser:output_type -> serviceproto.User
-	3, // [3:5] is the sub-list for method output_type
-	1, // [1:3] is the sub-list for method input_type
+	3, // 3: serviceproto.UserService.searchUser:input_type -> serviceproto.User
+	1, // 4: serviceproto.UserService.signIn:output_type -> serviceproto.SignInReponse
+	3, // 5: serviceproto.UserService.getUser:output_type -> serviceproto.User
+	3, // 6: serviceproto.UserService.searchUser:output_type -> serviceproto.User
+	4, // [4:7] is the sub-list for method output_type
+	1, // [1:4] is the sub-list for method input_type
 	1, // [1:1] is the sub-list for extension type_name
 	1, // [1:1] is the sub-list for extension extendee
 	0, // [0:1] is the sub-list for field type_name
